# type-const

./: Cargo.toml  LICENSE  README.md
src/: consts.rs  impls.rs  lib.rs
