[package]
name = "type-const"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "Type-level associated consts"
repository = "https://github.com/maxdexh/type-const"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["no_std", "const"]
authors = ["Max Dexheimer <maxdexh03@gmail.com>"]

[dependencies]
